--- a/templates/search.html
+++ b/templates/search.html
@@ -36,7 +36,7 @@
       <input type="text" id="author" name="author" class="author"><br><br>
 
       <!-- Search button -->
-      <input type="submit" id="search" class="button" value="Search">
+      <button class="button">Search</button>
     </form>
   </div>
   <div>
