--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,12 @@
 
     <!-- CSS stylesheet: style.css -->
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+
+    <!-- Google Fonts: Source Serif Pro -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro&display=swap" rel="stylesheet">
+    
     {% block head %}{% endblock %}
   </head>
   <body>
