--- a/static/style.css
+++ b/static/style.css
@@ -1,21 +1,29 @@
 body {
-  background-color: rgb(108, 144, 170);
+  background-color: rgb(138, 165, 185);
   color: rgb(226, 223, 223);
   margin: 75px;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: 'Source Serif Pro', serif;
 }
 
 h1 {
   font-size: 50px;
+  color: rgb(76, 101, 119);
   margin-bottom: 10px;
 }
 
 h2 {
   font-size: 35px;
+  color: rgb(76, 101, 119);
 }
 
 h3 {
   font-size: 25px;
+}
+
+input {
+  border: none;
+  border-radius: 4px;
+  margin-left: 10px;
 }
 
 .button {
@@ -26,6 +34,11 @@ h3 {
   padding-right: 13px;
   padding-top: 5px;
   padding-bottom: 5px;
+  transition: box-shadow 0.15s;
+}
+
+.button:hover {
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15)
 }
 
 .logoutSignInButton {
@@ -58,11 +71,11 @@ h3 {
 }
 
 .title {
-  margin-left: 39px;
+  margin-left: 33px;
 }
 
 .author {
-  margin-left: 21px;
+  margin-left: 15px;
 }
 
 .form-control {
@@ -74,6 +87,3 @@ h3 {
   padding-left: 10px;
 }
 
-.review {
-  width: 200px;
-}
