Modified interface of book detail page

--- a/templates/book.html
+++ b/templates/book.html
@@ -17,64 +17,76 @@
   </form>
 
   <div>
-    <!-- Provides user with book information -->
     <h1>
       {% if title %}
       <p>{{ title | safe }}</p>
       {% endif %}
     </h1>
 
+    <!-- Table containing book information -->
     <table class="table table-striped">
       <tbody>
         <tr>
           <th scope="row">
-            ISBN
-          </th>
-          <td>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-circle-fill" viewBox="0 0 16 16" style="margin-right: 15px;">
+              <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+            </svg>
             {% if isbn %}
-            <p>{{ isbn | safe }}</p>
+            ISBN: {{ isbn | safe }}
             {% endif %}
-          </td>
+          </th>
         </tr>
         <tr>
-          <th scope="row">Title</th>
-          <td>
+          <th scope="row">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-book-half" viewBox="0 0 16 16" style="margin-right: 15px;">
+              <path d="M8.5 2.687c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"/>
+            </svg>
             {% if title %}
-            <p>{{ title | safe }}</p>
+            Title: {{ title | safe }}
             {% endif %}
-          </td>
+          </th>
         </tr>
         <tr>
-          <th scope="row">Author</th>
-          <td>
+          <th scope="row">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16" style="margin-right: 15px;">
+              <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+              <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+            </svg>
             {% if author %}
-            <p>{{ author | safe }}</p>
+            Author: {{ author | safe }}
             {% endif %}
+          </th>
           </td>
         </tr>
         <tr>
-          <th scope="row">Year</th>
-          <td>
+          <th scope="row">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-date" viewBox="0 0 16 16" style="margin-right: 15px;">
+              <path d="M6.445 11.688V6.354h-.633A12.6 12.6 0 0 0 4.5 7.16v.695c.375-.257.969-.62 1.258-.777h.012v4.61h.675zm1.188-1.305c.047.64.594 1.406 1.703 1.406 1.258 0 2-1.066 2-2.871 0-1.934-.781-2.668-1.953-2.668-.926 0-1.797.672-1.797 1.809 0 1.16.824 1.77 1.676 1.77.746 0 1.23-.376 1.383-.79h.027c-.004 1.316-.461 2.164-1.305 2.164-.664 0-1.008-.45-1.05-.82h-.684zm2.953-2.317c0 .696-.559 1.18-1.184 1.18-.601 0-1.144-.383-1.144-1.2 0-.823.582-1.21 1.168-1.21.633 0 1.16.398 1.16 1.23z"/>
+              <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
+            </svg>
             {% if year %}
-            <p>{{ year | safe }}</p>
+            Year: {{ year | safe }}
             {% endif %}
-          </td>
+          </th>
         </tr>
         <tr>
-          <th scope="row">Average Rating</th>
-          <td>
+          <th scope="row">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16" style="margin-right: 15px;">
+              <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+            </svg>
             {% if averageRating %}
-            <p>{{ averageRating | safe }}</p>
+            Average Rating: {{ averageRating | safe }}
             {% endif %}
-          </td>
+          </th>
         </tr>
         <tr>
-          <th scope="row">Number of Ratings</th>
-          <td>
+          <th scope="row">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-people" viewBox="0 0 16 16" style="margin-right: 15px;">
+              <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8Zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022ZM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0ZM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816ZM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275ZM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0Zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4Z"/>
+            </svg>
             {% if numberOfRating %}
-            <p>{{ numberOfRating | safe }}</p>
+            Number of Ratings: {{ numberOfRating | safe }}
             {% endif %}
-          </td>
         </tr>
       </tbody>
     </table>
@@ -85,9 +97,13 @@
     </form>
   </div>
   <div>
-    <p style="font-weight: bold; text-decoration: underline; margin-top: 10px;">
-      Read this book? Leave a review below!
-    </p>
+    <h3 style="font-weight: bold; margin-top: 10px;">
+      <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+        <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+        <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+      </svg>
+      Write a Review
+    </h3>
     <!-- User review submission -->
     <form action="/review", method="POST">
       <!-- User's rating of book -->
@@ -101,7 +117,7 @@
       </select><br></br>
 
       <!-- Review input -->
-      <label for="review">Review: </label><br></br>
+      <label for="review">Review:</label><br></br>
       <div class="mb-3">
         <textarea class="form-control" id="review" name="review" rows="7" style="margin-top: -20px; margin-bottom: -50px"></textarea><br></br>
       </div>
@@ -114,12 +130,12 @@
     </form>
   </div>
   <div>
-    <p style="font-weight: bold; text-decoration: underline; margin-top: 15px;">Reviews from others: </p>
+    <h2 style="margin-top: 25px;">Reviews</h2>
 
     <!-- Displays existing reviews of the book from database table 'reviews'-->
     {% if reviews %}
         {% for review in reviews %}
-            <p>{{ review.review }}</p>
+          <p>{{ review.review }}</p>
         {% endfor %}
     {% endif %}
   </div>
