--- a/static/style.css
+++ b/static/style.css
@@ -7,23 +7,30 @@ body {
 
 h1 {
   font-size: 50px;
-  color: rgb(76, 101, 119);
+  color: rgb(66, 88, 103);
   margin-bottom: 10px;
 }
 
 h2 {
   font-size: 35px;
-  color: rgb(76, 101, 119);
+  color: rgb(66, 88, 103);
 }
 
 h3 {
   font-size: 25px;
+  color: rgb(66, 88, 103);
 }
 
 input {
   border: none;
   border-radius: 4px;
   margin-left: 10px;
+}
+
+select {
+  border: none;
+  border-radius: 4px;
+  padding-left: 5px;
 }
 
 .button {
@@ -50,7 +57,7 @@ input {
   border: none;
   border-radius: 10px;
   padding-left: 0px;
-  margin-bottom: 10px;
+  margin-bottom: 25px;
   cursor: pointer;
 }
 
