--- a/templates/search.html
+++ b/templates/search.html
@@ -40,7 +40,7 @@
     </form>
   </div>
   <div>
-      <h2 style="margin-top: 30px;">Results: </h2>
+      <h2 style="margin-top: 30px;">Results</h2>
       
       <!-- Select book from following results -->
       <form action="/view" method="POST">
